// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FromRemoteSummaryDocToSlo with kibana < v8.14 fallbacks to dummy indicator params and dates 1`] = `
Object {
  "budgetingMethod": "timeslices",
  "createdAt": 2024-01-01T00:00:00.000Z,
  "description": "irrelevant",
  "enabled": true,
  "groupBy": "*",
  "id": "irrelevant",
  "indicator": Object {
    "params": Object {
      "good": "",
      "index": "",
      "timestampField": "",
      "total": "",
    },
    "type": "sli.kql.custom",
  },
  "name": "irrelevant",
  "objective": Object {
    "target": 0.9999,
    "timesliceTarget": 0.95,
    "timesliceWindow": Duration {
      "unit": "m",
      "value": 5,
    },
  },
  "revision": 1,
  "settings": Object {
    "frequency": Duration {
      "unit": "m",
      "value": 1,
    },
    "preventInitialBackfill": false,
    "syncDelay": Duration {
      "unit": "m",
      "value": 1,
    },
  },
  "tags": Array [
    "prod",
  ],
  "timeWindow": Object {
    "duration": Duration {
      "unit": "d",
      "value": 7,
    },
    "type": "rolling",
  },
  "updatedAt": 2024-01-01T00:00:00.000Z,
  "version": 1,
}
`;

exports[`FromRemoteSummaryDocToSlo with kibana >= v8.14 uses the stringified indicator params and dates 1`] = `
Object {
  "budgetingMethod": "occurrences",
  "createdAt": 2024-02-01T00:00:00.000Z,
  "description": "irrelevant",
  "enabled": true,
  "groupBy": "*",
  "id": "irrelevant",
  "indicator": Object {
    "params": Object {
      "good": "irrelevant",
      "index": "irrelvant",
      "timestampField": "irrelevant",
      "total": "irrelevant",
    },
    "type": "sli.kql.custom",
  },
  "name": "irrelevant",
  "objective": Object {
    "target": 0.9999,
    "timesliceTarget": undefined,
    "timesliceWindow": undefined,
  },
  "revision": 1,
  "settings": Object {
    "frequency": Duration {
      "unit": "m",
      "value": 1,
    },
    "preventInitialBackfill": false,
    "syncDelay": Duration {
      "unit": "m",
      "value": 1,
    },
  },
  "tags": Array [
    "prod",
  ],
  "timeWindow": Object {
    "duration": Duration {
      "unit": "d",
      "value": 7,
    },
    "type": "rolling",
  },
  "updatedAt": 2024-02-01T00:00:00.000Z,
  "version": 1,
}
`;
